--- a/src/output.css
+++ b/src/output.css
@@ -56,10 +56,10 @@ body {
   gap: 15px;
   text-transform: upperCase;
 }
-#navbar .NavItems .HeartIcon {
+#navbar .NavItems .NavIcon {
   position: relative;
 }
-#navbar .NavItems .HeartIcon span {
+#navbar .NavItems .NavIcon span {
   background-color: red;
   position: absolute;
   top: -5px;
@@ -327,7 +327,7 @@ body {
   width: 35rem;
   height: 35rem;
   object-fit: cover;
-  object-position: top;
+  object-position: center;
 }
 #product .ProductGroup .ProductHoverImages {
   transition: all 0.1s ease-in-out;
@@ -368,7 +368,7 @@ body {
   font-weight: bold;
 }
 #product .ProductGroup .ProductBox .ProductDesctription {
-  font-size: clamp(16px, 2.5vw, 20px);
+  font-size: clamp(12px, 2.5vw, 20px);
   grid-area: 2/1/5/span 2;
 }
 #product .ProductGroup .ProductBox .CartButtonGroup {
@@ -482,7 +482,6 @@ body {
   width: 50%;
   height: 100%;
   object-fit: cover;
-  object-position: left;
 }
 .BannerSection div {
   width: 100%;
@@ -609,6 +608,7 @@ body {
   justify-content: space-around;
 }
 .cartGroup .cartItems .cartItem div #itemTitle {
+  max-width: 20rem;
   cursor: pointer;
   height: auto;
   text-align: start;
@@ -627,8 +627,8 @@ body {
   color: #D9D9D9;
   position: absolute;
   font-size: 1rem;
-  bottom: 1rem;
-  right: 1rem;
+  bottom: 2rem;
+  right: 2rem;
   cursor: pointer;
   background: none;
   border: none;
@@ -641,7 +641,7 @@ body {
   cursor: pointer;
   width: 15rem;
   height: 15rem;
-  object-position: bottom;
+  object-position: top;
   object-fit: cover;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
@@ -944,41 +944,6 @@ body {
   }
 }
 @media only screen and (max-width: 900px) {
-  .cartGroup {
-    flex-direction: column-reverse;
-  }
-  .cartGroup .cartItem img {
-    width: 10rem !important;
-    height: 10rem !important;
-  }
-  .cartGroup .cartItem div {
-    padding: 10px 10px 0px 10px !important;
-    flex-direction: column;
-    gap: 20px !important;
-    justify-content: flex-start !important;
-  }
-  .cartGroup .cartSummary {
-    min-width: 10rem !important;
-  }
-  #heroGrid {
-    display: flex !important;
-    flex-direction: column;
-  }
-  #heroGrid p {
-    font-size: clamp(2rem, 10vw, 5rem) !important;
-  }
-  .TrendingGroup a {
-    width: 10rem !important;
-  }
-  .TrendingGroup .TrendingHoverImages {
-    width: 10rem !important;
-  }
-  .TrendingGroup .TrendingHoverImages img {
-    width: 2rem !important;
-    height: 2rem !important;
-  }
-}
-@media only screen and (max-width: 800px) {
   #product {
     height: auto;
   }
@@ -1018,6 +983,43 @@ body {
     grid-area: 3/1/4/1 !important;
     align-items: center !important;
   }
+  .cartGroup {
+    flex-direction: column-reverse;
+    justify-content: flex-end;
+  }
+  .cartGroup .cartItem img {
+    width: 10rem !important;
+    height: 10rem !important;
+  }
+  .cartGroup .cartItem div {
+    padding: 10px 10px 0px 10px !important;
+    flex-direction: column;
+    gap: 20px !important;
+    justify-content: flex-start !important;
+  }
+  .cartGroup .cartSummary {
+    min-width: 10rem !important;
+  }
+  #heroGrid {
+    display: flex !important;
+    flex-direction: column;
+    height: 10rem;
+  }
+  #heroGrid p {
+    font-size: clamp(2rem, 10vw, 5rem) !important;
+  }
+  .TrendingGroup a {
+    width: 10rem !important;
+  }
+  .TrendingGroup .TrendingHoverImages {
+    width: 10rem !important;
+  }
+  .TrendingGroup .TrendingHoverImages img {
+    width: 2rem !important;
+    height: 2rem !important;
+  }
+}
+@media only screen and (max-width: 800px) {
   .BannerSection {
     flex-direction: column;
   }
