--- a/src/input.scss
+++ b/src/input.scss
@@ -573,7 +573,7 @@ body{
     
     span{
       width: 80%;
-      h1, p, a{
+       p{
         margin-bottom: 20px;
       }
       a{
@@ -1069,10 +1069,10 @@ body{
         grid-area: 2 / 1 / 4 / span 2 !important;
       }
       .CartButtonGroup{
-        grid-area: 5 / 1 / span 6 / span 2 !important;
+        grid-area: 5 / 1 / span 6 / 1 !important;
       }
       .ProductStockInfo{
-        grid-area: 4 / 1 / 5 / span 2 !important;
+        grid-area: 5 / 2 / span 6 / 2 !important;
       }
     }
   }
