--- a/src/output.css
+++ b/src/output.css
@@ -329,6 +329,26 @@ body {
   object-fit: cover;
   object-position: center;
 }
+#product .ProductGroup .ProductImgGroup {
+  position: relative;
+}
+#product .ProductGroup .ProductImgGroup .ProductHeart {
+  cursor: pointer;
+  position: absolute;
+  top: 10px;
+  left: 0;
+  font-size: 2rem;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100%;
+  padding: 5px;
+  transition: all 0.1s ease-in-out;
+}
+#product .ProductGroup .ProductImgGroup .ProductHeart:hover {
+  background-color: #D9D9D9;
+}
 #product .ProductGroup .ProductHoverImages {
   transition: all 0.1s ease-in-out;
   cursor: pointer;
